# lab6_threads

./: CMakeLists.txt  main.cpp
